Fixed issue of overlapping async events

--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,6 @@ body {
   color: white;
   font-family: 'Ubuntu', sans-serif;
   text-align: center;
-  margin: 0;
 }
 
 header {
